# rarc

./: .gitignore  Cargo.toml  README.md  gh-pages.sh  index.html  rustfmt.toml  todo.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: 1_arc.rs  2_arcs.rs  2_arcs_minkowski.rs  3_circle_collision.rs  3_points_to_circle.rs  arc_chain.rs  circle_collision.rs  display.rs  hello_world.rs  minkowski.rs  poly_arc_minkowski.rs
src/: constants.rs  lib.rs  main.rs  math.rs  util.rs
src/geom/: arc.rs  arc_graph.rs  arc_poly.rs  circle.rs  misc.rs  segment.rs
src/tests/: math.rs
src/tests/geom/: arc.rs
