[package]
name = "rarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2" }
bevy-inspector-egui = "0.24"
derive_more = { version = "0.99.16", features = ["display", "add"] }
itertools = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"
