[package]
name = "rarc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 'dynamic_linking' not working with lldb (vscode debugging)
# bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy = { version = "0.16.0" }
bevy_egui = { version = "0.34.1" }
bevy-inspector-egui = { version = "0.31.0" }
derive_more = { version = "2.0.1", features = ["add", "deref"] }
itertools = "0.14.0"
rand = "0.9.1"
rand_distr = "0.5.1"
